another fix for overflow-scrolling

--- a/css/main-style-responsive.css
+++ b/css/main-style-responsive.css
@@ -144,8 +144,7 @@ nav a:hover {
     width: 100%;
 }
 iframe {
-  /*padding-left: 60px;*/
-  height: 100%;
+  height: calc(100% + 1px);
   width: 100%;
 }
 footer {
